        PR middle-end/28915         * gimplify.c (gimplify_init_constructor): Don't reduce TREE_CONSTANT         vector ctors.         * tree-cfg.c (verify_expr): Don't look into TREE_CONSTANT         vector ctors.         * expmed.c (make_tree): Handle CONST, SYMBOL_REF.         * tree.c (build_vector): Handle non-_CST elements.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@118747 138bc75d-0d04-0410-961f-82ee72b054a4